src/test/resources/cocos/valid/imports/starImport/Import Vehicle.sysml
/* (c) https://github.com/MontiCore/monticore */
package 'Import Vehicle'{
  private import 'Symbol Definition'::*;
  block AlreadyInScope;
}
