src/test/resources/cocos/invalid/imports/elementNameAlreadyExists2/Import Vehicle.sysml
/* (c) https://github.com/MontiCore/monticore */
package 'Import Vehicle'{
  import 'Symbol Definition'::*;
  block AlreadyInScope;
}
